# ooad-vibe

./: .gitignore  CMakeLists.txt  README.md
.agents/: agents.md
Simulator/: GridMap.cpp  GridMap.h  Point.h  RvcSimulator.cpp  RvcSimulator.h  SimulatedCleaner.cpp  SimulatedCleaner.h  SimulatedMotor.cpp  SimulatedMotor.h  SimulatedSensor.cpp  SimulatedSensor.h  SystemTestCases.cpp  SystemTestCases.h  SystemTestMode.cpp  SystemTestMode.h
docs/: coverage-cli-default.coverage  coverage-cli-scenario.coverage  coverage-rvc-tests.coverage  coverage-test-results.xml  coverage.cobertura.xml  coverage.merged.cobertura.xml  coverage_analysis.html  generate_coverage_analysis.ps1  ooa_domain_diagram.md  ooa_ssd.md  ood_class_diagram.md  ood_sequence_diagrams.md  r2_before_after_changes.md  requirements.md  scenario_catalog.md  sdd.md  srs.md  static_analysis_results.md  test_results.md  traceability.md
include/rvc/: CleaningPowerPolicy.hpp  GridSimulator.hpp  NavigationPolicy.hpp  Rvc.hpp  RvcController.hpp  RvcHardwareAdapter.hpp  RvcSubsystems.hpp  SimulatedHardwareAdapter.hpp  Types.hpp
scenarios/: backward_escape.rvc  backward_escape2.rvc  boundary_without_outer_wall.rvc  clear_corridor_forward.rvc  continuous_backward.rvc  dense_dust_maze_extreme.rvc  dust_and_interrupt.rvc  dust_before_dead_end_escape.rvc  dust_trail_boost_refresh.rvc  front_both_sides_open.rvc  front_clears_but_sides_still_blocked.rvc  front_left_only_open.rvc  front_right_only_open.rvc  large_open_room_dust_sweep.rvc  long_escape_left_exit_extreme.rvc  long_escape_right_exit_extreme.rvc  narrow_tunnel_sides_blocked_front_clear.rvc  ragged_map_edge_extreme.rvc  repeated_front_interrupts_alternation.rvc  return_to_start_dust_refresh.rvc  sealed_box_extreme.rvc
scenarios/error_cases/: empty_map_invalid.rvc  missing_map_invalid.rvc  multiple_robots_invalid.rvc  negative_ticks_invalid.rvc  no_robot_invalid.rvc  unknown_symbol_validation_gap.rvc
simulator_rvc_interface/: CHANGELOG.md  CMakeLists.txt  ImportedSimulatorMain.cpp
simulator_rvc_interface/Class/: CleanerController.cpp  CleanerController.h  EventBus.cpp  EventBus.h  ISensor.h  MotorController.cpp  MotorController.h  PowerController.cpp  PowerController.h  SensorController.cpp  SensorController.h  Timer.cpp  Timer.h
simulator_rvc_interface/HDWARE/: HwCleaner.h  Motor.h
simulator_rvc_interface/tests/: SimulatorInterfaceSmoke.cpp
src/: CleaningPowerPolicy.cpp  GridSimulator.cpp  NavigationPolicy.cpp  Rvc.cpp  RvcController.cpp  RvcSubsystems.cpp  SimulatedHardwareAdapter.cpp  Types.cpp  main.cpp
tests/: controller_tests.cpp  policy_tests.cpp  rvc_subsystems_tests.cpp  rvc_tests.cpp  system_tests.cpp  types_tests.cpp
